--- a/assets/css/privacy.css
+++ b/assets/css/privacy.css
@@ -160,6 +160,7 @@
   line-height: 1.6;
   color: #666;
   font-size: 0.95rem;
+  text-align: left;
 }
 
 /* Implementation Cards */
@@ -195,6 +196,7 @@
   font-size: 0.9rem;
   color: #4b5563;
   line-height: 1.5;
+  text-align: left;
 }
 
 /* Privacy Link */
@@ -259,6 +261,7 @@
   font-size: 0.9rem;
   color: #666;
   line-height: 1.5;
+  text-align: left;
 }
 
 /* Alternative Formats */
